--- a/package.json
+++ b/package.json
@@ -9,12 +9,15 @@
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "@types/jest": "^25.2.2",
+    "@types/material-ui": "^0.21.7",
     "@types/node": "^14.0.1",
     "@types/react": "^16.9.35",
     "@types/react-dom": "^16.9.8",
+    "node-sass": "^4.14.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-scripts": "3.4.1",
+    "sass": "^1.26.5",
     "typescript": "^3.9.2"
   },
   "scripts": {
