decided to point my site to my domain today, maybe I will do some more of that for the other projects in the future

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://StrawHatAaron.github.io/typescript-rocks-frontend",
+  "homepage": "https://typescript.rocks",
   "name": "typescript-rocks-frontend",
   "version": "0.1.0",
   "private": true,
