--- a/package.json
+++ b/package.json
@@ -9,17 +9,10 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
-    "@types/jest": "^25.2.2",
-    "@types/material-ui": "^0.21.7",
-    "@types/node": "^14.0.1",
-    "@types/react": "^16.9.35",
-    "@types/react-dom": "^16.9.8",
     "next": "latest",
-    "node-sass": "^4.14.1",
     "react": "latest",
     "react-dom": "latest",
     "react-scripts": "3.4.1",
-    "sass": "^1.26.5",
     "typescript": "^3.9.2"
   },
   "scripts": {
@@ -47,6 +40,10 @@
     ]
   },
   "devDependencies": {
-    "gh-pages": "^3.1.0"
+    "@types/jest": "^25.2.2",
+    "@types/material-ui": "^0.21.7",
+    "@types/node": "^14.0.1",
+    "@types/react": "^16.9.35",
+    "@types/react-dom": "^16.9.8"
   }
 }
